# python-pde

./: .gitignore  .gitpod.yml  README.md  Untitled.ipynb  advection-pystencils.html  advectionper.html  bibliography.html  clawpack.html  diffusioncrancknic.html  findiff.html  format.sh  genindex.html  intro.html  main.py  objects.inv  petsc.html  py-pde.html  pystencils.html  search.html  searchindex.js  solve-findiff.html  symbolic-findiff.html  test.py
_sources/: intro.md  (+8 more)
pde-book/: Examples.ipynb  PureDifusion.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  _config.yml  _toc.yml  advection-pystencils.ipynb  cleaner.py  diffusioncrancknic.ipynb  findiff-examples.ipynb  findiff.ipynb  finite-differences.ipynb  helper.py  intro.md  jax.ipynb  markdown.md  matplotlibrc  notebooks.ipynb  notes-elliptic.ipynb  notes-examples.ipynb  notes-fda.ipynb  notes-octave.ipynb  notes-pde.ipynb  notes-python.ipynb  notes.ipynb  octave.ipynb  petsc.ipynb  py-pde-examples.ipynb  py-pde.ipynb  pyanimation.ipynb  pyproject.toml  pystencils.ipynb  references.bib  solve-findiff.ipynb
pde-book/TMA4125/: AdaptiveQuadrature.ipynb  ErrorAnalysisNuMeODE.ipynb  SimpleQuadrature.ipynb  TwoPointBoundaryProblems.ipynb  lecture_01_introduction.ipynb
pde-book/fluids/: PureDiffusion-I.ipynb  PureDiffusion-II.ipynb  Untitled.ipynb  advection-diffusion-1d.ipynb  intro.md  lecture1.ipynb  lecture2.ipynb  lecture3.ipynb  lecture4.ipynb  lecture5.ipynb  lecture6.ipynb
pde-book/hplgit/: vibration.ipynb
pde-book/jax/: finitediffx.ipynb  jax.ipynb  kernex.ipynb
pde-book/mimetic/: mole.ipynb
(+157 files in other folders)
